--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get:
   file_picker: ^5.2.1
   shared_preferences: ^2.0.15
+  cached_network_image: ^3.2.2
 
 dev_dependencies:
   flutter_test:
