--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   file_picker: ^5.2.1
   shared_preferences: ^2.0.15
   cached_network_image: ^3.2.2
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_test:
