step count done

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.body_fix2">
+   <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
    <application
         android:label="body_fix2"
         android:name="${applicationName}"
