--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   shared_preferences: ^2.0.15
   cached_network_image: ^3.2.2
   percent_indicator: ^4.2.2
+  pedometer: ^3.0.0
+  permission_handler: ^10.2.0
+  lottie: ^2.1.0
 
 dev_dependencies:
   flutter_test:
