--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   pedometer: ^3.0.0
   permission_handler: ^10.2.0
   lottie: ^2.1.0
+  firebase_core: ^2.4.0
+  firebase_auth: ^4.2.3
+  cloud_firestore: ^4.3.0
+  firebase_storage: ^11.0.9
+
 
 dev_dependencies:
   flutter_test:
