--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.body_fix2">
    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
    <application
-        android:label="body_fix2"
+        android:label="Body Fix"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
